--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,6 @@
 
 
 
-*,
-::before,
-::after{
-
-    box-sizing: border-box;
-}
 
 
 
@@ -864,3 +858,97 @@ button, select{
     background-color: #31d0aa;
 }
 
+
+
+
+.form-container{
+
+    display: flex;
+    margin-left:80px;
+    flex-direction: column;
+    
+    
+}
+
+
+.form-text{
+
+    font-weight:500;
+    font-size: 16px;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #ffffff;
+    margin-bottom:16px;
+
+
+  
+     
+
+}
+
+.footer-form{
+
+    
+   
+    gap:24px;
+    display:flex;
+    
+    
+
+
+}
+
+
+
+input{
+
+   
+    background-color: transparent;
+    font-family: Roboto;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 24px; /* 200% */
+    letter-spacing: 0.48px;
+    color: #ffffff; 
+
+    width:264px;
+    display:flex;
+    border: 1px solid#ffffff;
+    border-radius:4px;
+    height:40px;
+    padding-left: 16px;
+   
+
+
+   
+     
+}
+
+
+input::placeholder{
+
+    
+    color: #ffffff;
+     
+
+}
+
+.push-email{
+
+   display:flex;
+   justify-content:center;
+   align-items:center;
+   width:165px;
+   height:40px;
+   background-color: #4D5AE5;
+   border: 1px solid#212121;
+
+   font-weight: 500;
+   font-size:16px;
+   line-height: 1.5;
+   color: #F4F4FD;
+
+
+
+}
