--- a/css/style.css
+++ b/css/style.css
@@ -158,7 +158,6 @@ ul {
     line-height: 1.5;
     letter-spacing: 0.02em;
     color: #2e2f42;
-    color: #404bbf; 
     text-decoration:none;
     padding: 24px 0;
     display:block; 
@@ -168,9 +167,25 @@ ul {
    
 }
 
+.scram{
+
+    font-weight: 500;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: #2e2f42;
+    color: #404bbf; 
+    text-decoration:none;
+    padding: 24px 0;
+    display:block; 
+    position:relative;
+    transition:color 250ms cubic-bezier(0.4, 0, 0.2, 1) 
 
 
-.index-bimbex::after{
+}
+
+
+
+.scram::after{
 
     background-color: #404bbf; 
     content: "";
@@ -900,7 +915,7 @@ button, select{
 
 
 
-input{
+.footer-input{
 
    
     background-color: transparent;
@@ -943,12 +958,27 @@ input::placeholder{
    height:40px;
    background-color: #4D5AE5;
    border: 1px solid#212121;
+   border-radius:4px;
+
 
    font-weight: 500;
    font-size:16px;
    line-height: 1.5;
+   letter-spacing:0.02em;
    color: #F4F4FD;
+   padding-left: 24px;
 
+
+
+}
+
+.footer-svg{
+
+
+    display: flex;
+    margin-left:16px;
+    fill:#F4F4FD;
+    
 
 
 }
