--- a/css/style.css
+++ b/css/style.css
@@ -679,7 +679,9 @@ button, select{
 
 }
 
-.project-card:hover .paragraph{
+.project-card:hover .paragraph,
+.project-card:focus .paragraph
+{
 
     transform:translateY(0);
     cursor: pointer;
@@ -977,8 +979,8 @@ input::placeholder{
 
     display: flex;
     margin-left:16px;
-    fill:#F4F4FD;
-    
+    fill:white;
+
 
 
 }
