--- a/css/style.css
+++ b/css/style.css
@@ -988,3 +988,45 @@ input::placeholder{
 }
 
 
+.modal-window{
+
+
+    display: none;
+    background: rgba(46, 47, 66, 0.4);
+    position: fixed;
+    top:0;
+    left:0;
+    width: 100%;
+    height: 100%;
+    cursor: pointer;
+    /* указываем z-индекс для корректного наслаивания */
+    z-index: 1;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+
+.modal-box{
+
+
+    top:50%;
+    left:50%;
+    transform: translate(-50%, -50%) scale(1);
+    width: 408px; 
+    min-height: 584px; 
+    border-radius: 4px; 
+    
+
+}
+
+.close-button{
+
+
+    top:24px;
+    left:24px;
+    width:24px;
+    height:24px;
+    
+
+
+}
