--- a/css/style.css
+++ b/css/style.css
@@ -1,6 +1,10 @@
 
 
+* {
 
+    margin: 0;
+    padding: 0;
+}
 
 
 
@@ -988,45 +992,135 @@ input::placeholder{
 }
 
 
+
+
+
+
+
+
+/*Modal box*/
+
+
+
+.modal-window .is-open{
+
+    opacity: 1;
+    visibility: visible;
+    transition: opacity 0.25s cubic-bezier(0.4, 0, 0.2, 1), visibility 0.25s cubic-bezier(0.4, 0, 0.2, 1);
+    
+    
+}
+
 .modal-window{
 
 
-    display: none;
     background: rgba(46, 47, 66, 0.4);
     position: fixed;
-    top:0;
     left:0;
+    top:0;
     width: 100%;
     height: 100%;
-    cursor: pointer;
-    /* указываем z-индекс для корректного наслаивания */
-    z-index: 1;
-    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    overflow: auto;
+    
+   
 
 }
 
 
 .modal-box{
-
-
-    top:50%;
-    left:50%;
+    
+    background: #fcfcfc;
+    position: absolute;
+    left: 50%;
+    top: 50%;
     transform: translate(-50%, -50%) scale(1);
-    width: 408px; 
-    min-height: 584px; 
-    border-radius: 4px; 
+    width: 408px;
+    min-height: 584px;
+    border-radius: 4px;
+    box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 2px 1px rgba(0, 0, 0, 0.2);
+    border-radius: 4px;
+    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    padding: 72px 24px 24px 24px;
     
 
 }
 
 .close-button{
 
-
+    border-radius: 50%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    right:24px;
     top:24px;
-    left:24px;
     width:24px;
     height:24px;
+
+    padding: 0;
+    background-color: #e7e9fc;
+    border: 1px solid rgba(0,0,0,1);
+    
+    cursor: pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1); 
     
 
 
 }
+
+.modal-box-paragraph{
+
+    
+    font-weight: 500;
+    font-size: 16px;
+    font-family: Roboto;
+    line-height: 1.5;
+    letter-spacing: 0.02em;
+    color: var(--NAVY-BLUE, #2E2F42);
+
+
+    margin-bottom: 16px;
+    text-align: center;
+    width: 360px;
+
+}
+
+
+.modal-form-label{
+
+
+    display:flex;
+    flex-direction:column;
+    
+    color: var(--LIGHT-SLATE, #8E8F99);
+    /* Small Text */
+    font-family: Roboto;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 14px; /* 116.667% */
+    letter-spacing: 0.48px;
+    
+
+
+
+
+}
+
+.modal-box-input{
+
+    width:360px;
+    height:48px;
+    
+
+
+}
+
+
+.radio-button {
+
+    
+    margin-bottom: 16px;
+     
+}
+
+
