--- a/css/style.css
+++ b/css/style.css
@@ -1051,6 +1051,7 @@ input::placeholder{
     display: flex;
     align-items: center;
     justify-content: center;
+    position: absolute;
     right:24px;
     top:24px;
     width:24px;
@@ -1058,7 +1059,7 @@ input::placeholder{
 
     padding: 0;
     background-color: #e7e9fc;
-    border: 1px solid rgba(0,0,0,1);
+    border: 1px solid rgba(0,0,0,0.1);
     
     cursor: pointer;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1); 
@@ -1067,6 +1068,34 @@ input::placeholder{
 
 }
 
+.close-button:hover,
+.close-button:focus{
+
+    border: none; 
+    background-color: #404bbf; 
+   
+
+
+
+}
+
+
+.close-button-picture{
+
+    transition: fill 250ms cubic-bezier(0.4,0,0.2,1);
+
+}
+
+
+.close-button-picture:hover,
+.close-button-picture:focus{
+
+    fill: #ffffff;
+
+}
+
+
+
 .modal-box-paragraph{
 
     
@@ -1074,7 +1103,7 @@ input::placeholder{
     font-size: 16px;
     font-family: Roboto;
     line-height: 1.5;
-    letter-spacing: 0.02em;
+    letter-spacing: 0.32px;
     color: var(--NAVY-BLUE, #2E2F42);
 
 
@@ -1085,10 +1114,21 @@ input::placeholder{
 }
 
 
+
+.form-box-modal{
+
+ 
+    margin-bottom:8px;
+ 
+ 
+ }
+
+
 .modal-form-label{
 
 
-    display:flex;
+    display:block;
+    margin-bottom: 4px;
     flex-direction:column;
     
     color: var(--LIGHT-SLATE, #8E8F99);
@@ -1099,28 +1139,81 @@ input::placeholder{
     font-weight: 400;
     line-height: 14px; /* 116.667% */
     letter-spacing: 0.48px;
+    line-height: 1.17;
     
 
 
 
 
 }
+
+.input-container{
+
+   
+    position:relative;
+    
+
+
+}
+
+
 
 .modal-box-input{
-
-    width:360px;
-    height:48px;
+    
+    width:100%;
+    height:40px;
+    border: 1px solid rgba(46, 47, 66, 0.4); 
+    border-radius:4px;
+    background-color: transparent; 
+    padding-left: 38px; 
+    outline: transparent;
+    border-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
 
 
 }
 
+.modal-box-input:focus{
 
-.radio-button {
+   
+    border-color: #4d5ae5;;
 
-    
+
+}
+
+.form-box-comment{
+
+
+
     margin-bottom: 16px;
-     
+
+
 }
+
+
+.mytext{
+
+
+    height:120px;
+    font-size:12px;
+    line-height:1.17;
+    letter-spacing:0.04em;
+    color:rgba(46,47,66, 0.4);
+    border: 1px solid rgba(46,47,66, 0.4);
+    border-radius:4px;
+    background-color: transparent;
+    padding:8px 16px;
+
+
+
+
+}
+
+
+
+
+
+
+
 
 
