--- a/css/style.css
+++ b/css/style.css
@@ -941,6 +941,7 @@ button, select{
     border-radius:4px;
     height:40px;
     padding-left: 16px;
+    filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
    
 
 
@@ -962,19 +963,23 @@ input::placeholder{
    display:flex;
    justify-content:center;
    align-items:center;
-   width:165px;
+   min-width:165px;
    height:40px;
    background-color: #4D5AE5;
    border: 1px solid#212121;
    border-radius:4px;
 
-
+   font-family: Roboto;
    font-weight: 500;
    font-size:16px;
    line-height: 1.5;
-   letter-spacing:0.02em;
-   color: #F4F4FD;
+   letter-spacing:0.04em;
+   color: #ffffff;
    padding-left: 24px;
+   cursor: pointer;
+   border: none;
+
+
 
 
 
@@ -1193,7 +1198,7 @@ input::placeholder{
 
 .mytext{
 
-
+    width:100%;
     height:120px;
     font-size:12px;
     line-height:1.17;
@@ -1203,9 +1208,17 @@ input::placeholder{
     border-radius:4px;
     background-color: transparent;
     padding:8px 16px;
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
 
 
 
+
+}
+
+.mytext:focus{
+
+   
+    border-color: #4D5AE5;
 
 }
 
