--- a/css/style.css
+++ b/css/style.css
@@ -1172,8 +1172,21 @@ input::placeholder{
     background-color: transparent; 
     padding-left: 38px; 
     outline: transparent;
-    border-color: 250ms cubic-bezier(0.4, 0, 0.2, 1);
+    transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
     
+
+
+}
+
+.modal-box-pictures{
+
+    
+    position:absolute;
+    left:16px;
+    top:50%;
+    transform:translateY(-50%);
+    transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 
 
 }
@@ -1181,10 +1194,23 @@ input::placeholder{
 .modal-box-input:focus{
 
    
-    border-color: #4d5ae5;;
+    border-color: #4d5ae5;
 
 
 }
+
+.modal-box-input:focus .modal-box-pictures{
+
+   
+    border-color: #4d5ae5;
+
+
+}
+
+
+
+
+
 
 .form-box-comment{
 
@@ -1196,7 +1222,7 @@ input::placeholder{
 }
 
 
-.mytext{
+.second-text{
 
     width:100%;
     height:120px;
@@ -1209,6 +1235,8 @@ input::placeholder{
     background-color: transparent;
     padding:8px 16px;
     transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1); 
+    outline: transparent;
+    resize:none;
 
 
 
@@ -1220,6 +1248,104 @@ input::placeholder{
    
     border-color: #4D5AE5;
 
+}
+
+.checkbox-container{
+
+
+    margin-bottom:24px;
+
+
+
+}
+
+.checkbox-label{
+
+
+    color: var(--LIGHT-SLATE, #8E8F99);
+    /* Small Text */
+    font-family: Roboto;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 14px; /* 116.667% */
+    letter-spacing: 0.48px;
+
+
+}
+
+.span-icon{
+
+
+
+    width:16px;
+    height:16px;
+    border: 1px solid rgba(46,47,66,0.4);
+    border-radius:2px;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    display:inline-flex;
+    justify-content: center;
+    align-items:center;
+    fill:transparent;
+
+
+
+
+
+}
+
+.radio-button:checked .span-icon{
+
+
+    background-color: #404BBf;
+    border:none;
+    fill:#f4f4fd;
+
+
+
+}
+
+
+.span-link{
+
+
+    color:
+    /* Small Text */
+    font-family: Roboto;
+    font-size: 12px;
+    font-style: normal;
+    font-weight: 400;
+    line-height: 14px; /* 116.667% */
+    letter-spacing: 0.48px;
+    text-decoration: underline;
+
+
+}
+
+
+
+.modal-button{
+
+    
+    display: block;
+    color:#ffffff;
+
+    min-width:169px;
+    height:56px;
+
+    font-family: "Roboto", sans-serif;
+    font-size:16px;
+    font-weight:500;
+    line-height:1.5;
+    letter-spacing: 0.04em;
+    background-color: #4D5AE5;
+    border:none;
+    border-radius:4px;
+    cursor:pointer;
+    transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+     
 }
 
 
