--- a/css/style.css
+++ b/css/style.css
@@ -1073,17 +1073,6 @@ input::placeholder{
 
 }
 
-.close-button:hover,
-.close-button:focus{
-
-    border: none; 
-    background-color: #404bbf; 
-   
-
-
-
-}
-
 
 .close-button-picture{
 
@@ -1092,12 +1081,22 @@ input::placeholder{
 }
 
 
-.close-button-picture:hover,
-.close-button-picture:focus{
+.close-button:hover,
+.close-button:focus{
 
-    fill: #ffffff;
+    border: none; 
+    background-color: #404bbf; 
+    fill:#ffffff;
+
+
+
 
 }
+
+
+
+
+
 
 
 
@@ -1244,7 +1243,7 @@ input::placeholder{
 
 }
 
-.mytext:focus{
+.second-text:focus{
 
    
     border-color: #4D5AE5;
@@ -1269,7 +1268,7 @@ input::placeholder{
     font-size: 12px;
     font-style: normal;
     font-weight: 400;
-    line-height: 14px; /* 116.667% */
+    line-height: 1.17; /* 116.667% */
     letter-spacing: 0.48px;
 
 
@@ -1296,22 +1295,22 @@ input::placeholder{
 
 }
 
-.visually-hidden:checked{
-
-
-    background-color: #404BBf;
-    border:none;
-    fill:#f4f4fd;
-
-
-
+.radio-button:checked + .checkbox-label > .span-icon {
+    background-color: #404BBF;
+    border: none;
+    fill: #F4F4FD;
 }
+
+
+
+
+
 
 
 .span-link{
 
 
-    color:
+    color: #4D5AE5;
     /* Small Text */
     font-family: Roboto;
     font-size: 12px;
@@ -1346,7 +1345,8 @@ input::placeholder{
     cursor:pointer;
     transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-     
+    margin: 0 auto;
+    
 }
 
 
