--- a/css/style.css
+++ b/css/style.css
@@ -1011,8 +1011,7 @@ input::placeholder{
 
     opacity: 1;
     visibility: visible;
-    transition: opacity 0.25s cubic-bezier(0.4, 0, 0.2, 1), visibility 0.25s cubic-bezier(0.4, 0, 0.2, 1);
-    
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);     
     
 }
 
