--- a/css/style.css
+++ b/css/style.css
@@ -1196,7 +1196,9 @@ input::placeholder{
     left:16px;
     top:50%;
     transform:translateY(-50%);
+    fill: black;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
 
 
 
