--- a/css/style.css
+++ b/css/style.css
@@ -1196,7 +1196,7 @@ input::placeholder{
     left:16px;
     top:50%;
     transform:translateY(-50%);
-    fill: #4d5ae5;
+    fill:none;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 
@@ -1204,14 +1204,11 @@ input::placeholder{
 
 }
 
-.modal-box-input:focus .modal-box-pictures { 
+.modal-box-pictures:focus { 
     fill: #4D5AE5;
 }
 
 
-.modal-box-input:focus .modal-box-pictures {
-    fill: none; 
-}
 
 
 
