--- a/css/style.css
+++ b/css/style.css
@@ -1025,6 +1025,8 @@ input::placeholder{
     width: 100%;
     height: 100%;
     overflow: auto;
+    transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);     
+
     
    
 
@@ -1196,7 +1198,7 @@ input::placeholder{
     left:16px;
     top:50%;
     transform:translateY(-50%);
-    fill:black;
+    fill:#2e2f42;
     transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 
@@ -1204,8 +1206,10 @@ input::placeholder{
 
 }
 
-.modal-box-pictures:focus { 
+.modal-box-input:focus + .modal-box-pictures{
+
     fill: #4D5AE5;
+
 }
 
 
